; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_cipher.c_mv_cesa_skcipher_prepare.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_cipher.c_mv_cesa_skcipher_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_async_request = type { i32 }
%struct.mv_cesa_engine = type { i32 }
%struct.skcipher_request = type { i32 }
%struct.mv_cesa_skcipher_req = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mv_cesa_engine* }

@CESA_DMA_REQ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_async_request*, %struct.mv_cesa_engine*)* @mv_cesa_skcipher_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv_cesa_skcipher_prepare(%struct.crypto_async_request* %0, %struct.mv_cesa_engine* %1) #0 {
  %3 = alloca %struct.crypto_async_request*, align 8
  %4 = alloca %struct.mv_cesa_engine*, align 8
  %5 = alloca %struct.skcipher_request*, align 8
  %6 = alloca %struct.mv_cesa_skcipher_req*, align 8
  store %struct.crypto_async_request* %0, %struct.crypto_async_request** %3, align 8
  store %struct.mv_cesa_engine* %1, %struct.mv_cesa_engine** %4, align 8
  %7 = load %struct.crypto_async_request*, %struct.crypto_async_request** %3, align 8
  %8 = call %struct.skcipher_request* @skcipher_request_cast(%struct.crypto_async_request* %7)
  store %struct.skcipher_request* %8, %struct.skcipher_request** %5, align 8
  %9 = load %struct.skcipher_request*, %struct.skcipher_request** %5, align 8
  %10 = call %struct.mv_cesa_skcipher_req* @skcipher_request_ctx(%struct.skcipher_request* %9)
  store %struct.mv_cesa_skcipher_req* %10, %struct.mv_cesa_skcipher_req** %6, align 8
  %11 = load %struct.mv_cesa_engine*, %struct.mv_cesa_engine** %4, align 8
  %12 = load %struct.mv_cesa_skcipher_req*, %struct.mv_cesa_skcipher_req** %6, align 8
  %13 = getelementptr inbounds %struct.mv_cesa_skcipher_req, %struct.mv_cesa_skcipher_req* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.mv_cesa_engine* %11, %struct.mv_cesa_engine** %14, align 8
  %15 = load %struct.mv_cesa_skcipher_req*, %struct.mv_cesa_skcipher_req** %6, align 8
  %16 = getelementptr inbounds %struct.mv_cesa_skcipher_req, %struct.mv_cesa_skcipher_req* %15, i32 0, i32 0
  %17 = call i64 @mv_cesa_req_get_type(%struct.TYPE_2__* %16)
  %18 = load i64, i64* @CESA_DMA_REQ, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %2
  %21 = load %struct.skcipher_request*, %struct.skcipher_request** %5, align 8
  %22 = call i32 @mv_cesa_skcipher_dma_prepare(%struct.skcipher_request* %21)
  br label %26

23:                                               ; preds = %2
  %24 = load %struct.skcipher_request*, %struct.skcipher_request** %5, align 8
  %25 = call i32 @mv_cesa_skcipher_std_prepare(%struct.skcipher_request* %24)
  br label %26

26:                                               ; preds = %23, %20
  ret void
}

declare dso_local %struct.skcipher_request* @skcipher_request_cast(%struct.crypto_async_request*) #1

declare dso_local %struct.mv_cesa_skcipher_req* @skcipher_request_ctx(%struct.skcipher_request*) #1

declare dso_local i64 @mv_cesa_req_get_type(%struct.TYPE_2__*) #1

declare dso_local i32 @mv_cesa_skcipher_dma_prepare(%struct.skcipher_request*) #1

declare dso_local i32 @mv_cesa_skcipher_std_prepare(%struct.skcipher_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
